--- a/index.html
+++ b/index.html
@@ -1336,10 +1336,12 @@
         }
 
         .subtitle {
-            color: #00008b;
+            color: #002A43;
             font-size: 18px;
             line-height: 1.5;
             margin-bottom: 40px;
+            margin: 21px 254px 31px 254px;
+            text-align: center;
         }
 
         .bold {
@@ -1364,7 +1366,7 @@
             border-bottom-right-radius: 10px;
         }
     </style>
-    <div class="center mt-md-4 imgdesk d-flex flex-column">
+    <div class="center mt-md-4 imgdesk d-flex flex-column" style="text-align: center;">
         <h1 class="main-title">Pacotes acessíveis para empresas<br>de todos os portes e diversos segmentos</h1>
         <p class="subtitle">O serviço <span class="bold">Equifax | BoaVista</span> da <span class="bold">Associação
                 Comercial de São Paulo</span>, atende às necessidades específicas de cada empresa, desde pequenos
@@ -1376,7 +1378,7 @@
 
     <img src="https://teste.acsp.com.br/public/upload/gallery/bvsmui/imgs/pacotesMoba.png" class="imgmoba"
         style="width: 90vw; margin: 25px">
-    <div class="container mt-5">
+    <div class="mt-5">
         <div id="carouselPrec" class="carousel slide imgmoba" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
