--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
             </div>
         </div>
         <div class="container-fluid d-flex justify-content-center mt-md-5 mb-md-5 imgdesk">
-            <div class=" row justify-content-center gx-2" style="max-width: 100%;">
+            <div class=" row justify-content-center gx-2" style="max-width: 100vw;">
                 <div class="col-auto">
                     <div class="p-2 containerPreco center">
                         <p><strong>R$<preco>60</preco><br>em créditos</strong></p>
