--- a/agradecimento.html
+++ b/agradecimento.html
@@ -292,12 +292,15 @@
                 object-fit: contain;
                 margin-left: 0px !important;
             }
+
             h3 {
-            margin-top: 25px;
-            font-weight: 700;
-            color: #A81C1B;
-            margin-bottom: 20px;;
-        }
+                margin-top: 25px;
+                font-weight: 700;
+                color: #A81C1B;
+                margin-bottom: 20px;
+                ;
+            }
+
             .menu {
                 display: none;
                 flex-direction: column;
@@ -483,16 +486,26 @@
             <span></span>
         </div>
         <div class="menu">
-            <div class="imgmoba"
-                style=" text-align: left; background-color: #002334; display: flex; width: 100%; margin: 0px; padding-top: 20px; padding-bottom: 20px; "
-                onclick="toggleMenu()">
-                <img src="/imgs/logo.png" class="logo" style="
-                           height: 50px;
-                            object-fit: cover;
-                            display: block;
-                            margin: 0;
-                            margin-left: 10px;
-                            position: relative;" alt="Logo" />
+            <div class="imgmoba" onclick="toggleMenu()"
+                style=" text-align: left; background-color: #002334; display: flex; width: 100%; margin: 0px;  justify-content: center;">
+                <img src="https://teste.acsp.com.br/public/upload/gallery/bvsmui/imgs/logo.png" class="logo" style="
+                       height: 80%;
+                       width: 100%;
+                        object-fit: contain;
+                        display: block;
+                        margin: 0;
+                        margin-left: 10px;
+                        position: relative;" alt="Logo">
+                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    style="margin: 10px 20px;">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M4.62615 4.62624C5.01667 4.23571 5.64983 4.23571 6.04036 4.62624L27.3737 25.9596C27.7642 26.3501 27.7642 26.9833 27.3737 27.3738C26.9832 27.7643 26.35 27.7643 25.9595 27.3738L4.62615 6.04045C4.23562 5.64993 4.23562 5.01676 4.62615 4.62624Z"
+                        fill="white"></path>
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M27.3737 4.62624C27.7642 5.01676 27.7642 5.64993 27.3737 6.04045L6.04036 27.3738C5.64983 27.7643 5.01667 27.7643 4.62615 27.3738C4.23562 26.9833 4.23562 26.3501 4.62615 25.9596L25.9595 4.62624C26.35 4.23571 26.9832 4.23571 27.3737 4.62624Z"
+                        fill="white"></path>
+                </svg>
+
             </div>
             <div class="menute">
 
