--- a/participantes.html
+++ b/participantes.html
@@ -701,11 +701,11 @@
     </div>
 
 
-    <div class="footer">
+    <div class="footer w-100">
         <div class="row container-fluid" style="width: 100vw;">
             <div class="col-md-3"></div>
-            <div class="col-md-3  d-flex align-items-center justify-content-center">
-                <div class=" pt-4 pb-5 text-white">
+            <div class="col-md-3  d-flex align-items-center justify-content-center ">
+                <div class=" pt-4 pb-5 text-white fotlogo">
                     <strong>Contato</strong>
                     <p class="text-white pt-4 d-flex "><svg width="24" height="25" viewBox="0 0 24 25" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -799,7 +799,7 @@
             </div>
             <div class="col-md-3"></div>
         </div>
-        <div class="container">
+        <div style="background-color: #002334; width: 100%; align-items: center;padding-top: 15px;">
             <div class="row">
                 <div class="col-md-6 d-flex align-items-center fotlogo">
                     <img src="https://acsp.com.br/public/upload/gallery/lp-associativismo-imgs/logo.png" class="logo"
