--- a/agradecimento.html
+++ b/agradecimento.html
@@ -551,10 +551,9 @@
             <p>
                 Enquanto isso, confira nosso conteúdo exclusivo sobre recuperação de crédito.
             </p>
-            <iframe width="800" height="415" src="https://www.youtube.com/embed/jfKfPfyJRdk?si=GLJ4o9d6nqxBKRW1" </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YVeX5haAodc?si=ICBxZG5DD3O0CCF6"
                 title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;
-                web-share"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         </div>
