--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
 
         }
 
+        .ytVideo {
+            width: 45vw;
+            max-width: 800px;
+            aspect-ratio: 16 / 9;
+            border-radius: 30px;
+            overflow: hidden;
+        }
+
         ul li strong {
             color: #002D44;
             font-weight: 600;
@@ -835,6 +843,14 @@
                 align-items: center;
             }
 
+            .ytVideo {
+                width: 80vw;
+                max-width: 800px;
+                aspect-ratio: 16 / 9;
+                border-radius: 30px;
+                overflow: hidden;
+            }
+
             .menute {
                 display: flex;
                 flex-direction: column;
@@ -1385,7 +1401,7 @@
             width: 170%;
             height: auto;
             border-radius: 8px;
-            margin-top: -360px;
+            margin-top: -50%;
             z-index: -66;
             position: relative;
         }
@@ -3282,8 +3298,7 @@
 
     <h2 style="text-align: center; font-weight: 700;"> Assista e confira como nossas soluções ajudam<br>
         seu negócio em todas as etapas do seu ciclo de crédito!</h2>
-    <div style="width: 45vw; max-width: 800px; aspect-ratio: 16 / 9; border-radius: 30px;
-overflow: hidden;">
+    <div class="ytVideo">
         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jhGXuS_nMOo?si=zSVBIxRYelQOJz5Q"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
