--- a/agradecimento.html
+++ b/agradecimento.html
@@ -562,7 +562,7 @@
         </div>
     </div>
     <div class="footer w-100">
-        <div class="row container-fluid" style="width: 100vw;">
+        <div class="row container-fluid" style="width: 100vw; height: 270px;">
             <div class="col-md-3"></div>
             <div class="col-md-3  d-flex align-items-center justify-content-center ">
                 <div class=" pt-4 pb-5 text-white fotlogo">
