--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@
             background-color: #4A96D2;
             padding: 5px 2dvh;
             border-radius: 50px;
+            min-width: 200px;
+            text-align: center;
         }
 
         .ladogif svg {
@@ -288,7 +290,9 @@
 
         .img {
             object-fit: contain;
-            width: 100vw;
+            width: 80vw;
+            margin-left: auto;
+            margin-right: auto;
             height: auto;
             z-index: -100;
         }
@@ -475,7 +479,7 @@
         }
 
         .botoes .active {
-            background-color: #71B1CA;
+            background-color: #4A96D2;
             width: 50%;
             height: 100%;
             border-radius: 50px;
@@ -1133,7 +1137,7 @@
                             </div>
 
                             <div style="display: flex; justify-content: center;">
-                                <button type="submit" class="btn btn-primary btn-block mt-3 fale">Solicite
+                                <button type="submit" class=" mt-3 fale">Solicite
                                     contato</button>
                             </div>
                         </form>
@@ -1350,7 +1354,12 @@
         </section>
 
         <img class="img" src="./imgs/topNew.png">
-
+        <div class="imgdesk"
+            style="background-color: #EFF0F0; height: 34px;  width: 100vw; display: flex; align-items: center; justify-content: center; text-align: center;">
+            Com informações precisas, você <b>&nbsp;otimiza suas vendas&nbsp;</b> e <b>&nbsp;ganha tempo&nbsp;</b> para
+            investir em outras
+            estratégias.
+        </div>
     </div>
     <div class="center d-flex justify-content-center align-items-center ">
 
@@ -1369,7 +1378,7 @@
 
         .naimon .headera {
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 90px;
         }
 
         .naimon h1 {
@@ -3360,7 +3369,7 @@
         </div>
     </div>
 </div>
-<img src="./imgs/newFim.png" class="imgdesk" style="width: 100vw; height: auto;" />
+<img src="./imgs/newFim.png" class="imgdesk" style="width: 70vw; height: auto; margin-bottom: 15px;" />
 </div>
 <style>
     .bg-custom-red {
@@ -3611,7 +3620,7 @@
         });
     });</script>
 <div class="footer w-100">
-    <div class="row container-fluid" style="width: 100vw;">
+    <div class="row container-fluid" style="width: 100vw; height: 270px;">
         <div class="col-md-3"></div>
         <div class="col-md-3  d-flex align-items-center justify-content-center ">
             <div class=" pt-4 pb-5 text-white fotlogo">
