--- a/participantes.html
+++ b/participantes.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -15,8 +19,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://acsp.com.br/public/template/ads/bvs-acconsulta-pages/js/functions.js"></script>
     <!-- Google tag (gtag.js) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://acsp.com.br/public/template/ads/bvs-acconsulta-pages/js/jquery.min.js"></script>
 
+    <!-- jQuery mask -->
+    <script src="https://acsp.com.br/public/template/ads/bvs-acconsulta-pages/js/jquery.mask.min.js"></script>
+
+    <!-- access -->
+    <script src="https://acsp.com.br/public/template/ads/bvs-acconsulta-pages/js/sweetalert2.all.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
+
+    <!-- scripts -->
+    <script src="https://acsp.com.br/public/template/ads/bvs-acconsulta-pages/js/functions.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PBH38WGJ5"></script>
 
     <script>
@@ -82,16 +99,78 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" type="image/ico" href="https://acsp.com.br/public/upload/gallery/lp-associativismo/favicon.ico">
+
+    <script>
+
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() { dataLayer.push(arguments); }
+
+        gtag('js', new Date());
+
+
+        gtag('config', 'G-5PBH38WGJ5');
+
+    </script>
+
+
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '869439323788367');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=869439323788367&ev=PageView&noscript=1" /></noscript>
+    <!-- End Facebook Pixel Code -->
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-WM5RJWVL');
+    </script>
+    <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WM5RJWVL" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="icon" type="image/ico" href="https://acsp.com.br/public/upload/gallery/lp-associativismo/favicon.ico">
+</head>
+
+<body>
     <style>
         body {
             background-color: #F7F7F7;
         }
-    </style>
-</head>
 
-<body>
-
-    <style>
         #cookie-consent {
             position: fixed;
             bottom: 0;
@@ -605,8 +684,17 @@
         <div class="col-md-6"></div>
 
     </div>
-    <img src="/imgs/motivos.png" class="imgdesk"
-        style="width: 100%; object-fit: contain; margin-top: 50px; margin-bottom: 50px;" />
+    <img src="/imgs/motivos.png" class="imgdesk "
+        style="margin-left: auto; margin-right: auto;width: 80%; object-fit: contain; margin-top: 50px; margin-bottom: 50px;" />
+    <div
+        style="background-color: #C9E0F2;text-align: center; justify-content: center; display: flex; align-items: center; font-size: 18px; padding: 5px 0px; font-weight: 700;">
+        Não esqueça de consultar seus benefícios como participante!
+    </div>
+    <div class="imgdesk" style="background-color: #FEFEFE; ">
+
+        <img src="/imgs/motivos2.png" class="imgdesk "
+            style="width: 80%;margin-left: auto;margin-right: auto; object-fit: contain; margin-top: 50px; " />
+    </div>
     </div>
     <div class="imgmoba" style="display: flex; flex-direction: column;">
         <h1 style="font-weight: 700; color: #4A96D2; text-align: center; width: 100vw; margin-top: 20px;">É simples e
@@ -685,6 +773,9 @@
                                 <label class="form-check-label" for="privacy" style="font-size: 0.875rem;">Ao informar
                                     meus dados, eu concordo com a Política de Privacidade</label>
                             </div>
+                            <div class="container mt-2 mb-2">
+                                <div class="g-recaptcha" data-sitekey="6LeWoFkeAAAAAHQp_aaprWIWCPqNVJgug7sja2Cu"></div>
+                            </div>
                             <button type="submit" class="btn w-100"
                                 style="background-color: #4a90e2; color: white; border: none; border-radius: 2rem; padding: 0.5rem 1rem;">Enviar
                                 dados de contato</button>
@@ -697,7 +788,7 @@
 
 
     <div class="footer w-100">
-        <div class="row container-fluid" style="width: 100vw;">
+        <div class="row container-fluid" style="width: 100vw; height: 270px;">
             <div class="col-md-3"></div>
             <div class="col-md-3  d-flex align-items-center justify-content-center ">
                 <div class=" pt-4 pb-5 text-white fotlogo">
