--- a/agradecimento.html
+++ b/agradecimento.html
@@ -271,7 +271,7 @@
             display: flex;
             flex-direction: row-reverse;
             justify-content: space-between;
-            background-image: url('./imgs/solucoes.png');
+            background-image: url('http://acsp.com.br/public/upload/gallery/bvseqx/solucoes.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -478,7 +478,7 @@
         }
     </style>
     <div class="header">
-        <img src="/imgs/logo.png" class="logo" alt="Logo" />
+        <img src="https://teste.acsp.com.br/public/upload/gallery/bvsmui/imgs/logo.png" class="logo" alt="Logo" />
         <div class="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
@@ -1241,7 +1241,7 @@
     <div class="btnWhatsapp associativismo" id="associativismo" style="display:block !important;overflow: hidden;">
         <a href="https://api.whatsapp.com/send/?phone=551131803737&amp;text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20BoaVista%20Equifax%20e%20gostaria%20de%20conversar%20com%20voc%C3%AAs"
             id="associativismo" title="Whatsapp" target="_blank">
-            <img src="./imgs/wpp.png" alt="" />
+            <img src="http://acsp.com.br/public/upload/gallery/bvseqx/wpp.png" alt="" />
         </a>
     </div>
     <script>
