--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,8 @@
 
             <div class="textodolado">
                 <h1>
-                    <img class="equifaxlogo" src="./imgs/equifaxboa.png" alt="">
+                    <img class="equifaxlogo" src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/equifaxboa.png"
+                        alt="">
                 </h1>
                 <h2 style="color:#002D44">
                     <b>
@@ -1227,7 +1228,8 @@
             </style>
             <div class="banner">
 
-                <h1><img class="equifaxlogo" src="./imgs/equifaxboa.png" alt=""></h1>
+                <h1><img class="equifaxlogo" src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/equifaxboa.png"
+                        alt=""></h1>
                 <h2>Soluções inovadoras em todo seu ciclo de crédito</h2>
                 <h6>Pacotes personalizados<br>
                     para o seu negócio!</h6>
@@ -1353,7 +1355,7 @@
             </ul>
         </section>
 
-        <img class="img" src="./imgs/topNew.png">
+        <img class="img" src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/topNew.png">
         <div class="imgdesk"
             style="background-color: #EFF0F0; height: 34px;  width: 100vw; display: flex; align-items: center; justify-content: center; text-align: center;">
             Com informações precisas, você <b>&nbsp;otimiza suas vendas&nbsp;</b> e <b>&nbsp;ganha tempo&nbsp;</b> para
@@ -1489,7 +1491,8 @@
             </div>
             <div class="content">
                 <div class="image-container">
-                    <img src="./imgs/41.png" alt="Pessoas trabalhando juntas">
+                    <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/41.png"
+                        alt="Pessoas trabalhando juntas">
                 </div>
                 <div class="steps-container">
                     <div class="intro">
@@ -3369,7 +3372,8 @@
         </div>
     </div>
 </div>
-<img src="./imgs/newFim.png" class="imgdesk" style="width: 70vw; height: auto; margin-bottom: 15px;" />
+<img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/newFim.png" class="imgdesk"
+    style="width: 70vw; height: auto; margin-bottom: 15px;" />
 </div>
 <style>
     .bg-custom-red {
@@ -3448,7 +3452,8 @@
             <div class="row g-0">
                 <div class="col-md-4 bg-custom-red text-white">
                     <h2 class="fw-bold duviudasx" style="color: #002D44">Dúvidas<br>frequentes</h2>
-                    <img src="./imgs/doda.png" style="object-fit: contain; width: 100%;" class="imgdesk" />
+                    <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/doda.png"
+                        style="object-fit: contain; width: 100%;" class="imgdesk" />
                 </div>
                 <div class="col-md-8 p-4 bodyaccordion">
                     <div class="accordion" id="faqAccordion">
@@ -3720,8 +3725,8 @@
     <div style="background-color: #002334; width: 100%; align-items: center;padding-top: 15px;">
         <div class="row">
             <div class="col-md-6 d-flex align-items-center fotlogo">
-                <img src="https://acsp.com.br/public/upload/gallery/lp-associativismo-imgs/logo.png" class="logo"
-                    style="height: 59px;" alt="Logo" />
+                <img src="http://acsp.com.br/public/upload/gallery/bvseqx/logo2.png" class="logo" style="height: 59px;"
+                    alt="Logo" />
             </div>
             <div class="col-md-6 d-flex align-items-center justify-content-center">
                 <p style="color: white; font-weight: 100; font-size: 15px;">
