--- a/participantes.html
+++ b/participantes.html
@@ -276,7 +276,7 @@
     </script>
     <style>
         .imagem {
-            background-image: url("/imgs/comprimentos.png");
+            background-image: url("http://teste.acsp.com.br/public/upload/gallery/bvseqx/comprimentos.png");
             background-size: cover;
             background-position: center;
             height: auto;
@@ -578,7 +578,7 @@
         }
     </style>
     <div class="header">
-        <img src="/imgs/logo.png" class="logo" alt="Logo" />
+        <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/logo.png" class="logo" alt="Logo" />
         <div class="hamburger" onclick="toggleMenu()">
             <span></span>
             <span></span>
@@ -587,7 +587,8 @@
         <div class="menu">
             <div class="imgmoba" onclick="toggleMenu()"
                 style=" text-align: left; background-color: #002334; display: flex; width: 100%; margin: 0px;  justify-content: center;">
-                <img src="https://teste.acsp.com.br/public/upload/gallery/bvsmui/imgs/logo.png" class="logo" style="
+                <img src="https://teste.acsp.com.br/public/upload/gallery/bvsmuihttp://teste.acsp.com.br/public/upload/gallery/bvseqx/logo.png"
+                    class="logo" style="
                        height: 80%;
                        width: 100%;
                         object-fit: contain;
@@ -684,7 +685,7 @@
         <div class="col-md-6"></div>
 
     </div>
-    <img src="/imgs/motivos.png" class="imgdesk "
+    <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/motivos.png" class="imgdesk "
         style="margin-left: auto; margin-right: auto;width: 80%; object-fit: contain; margin-top: 50px; margin-bottom: 50px;" />
     <div
         style="background-color: #C9E0F2;text-align: center; justify-content: center; display: flex; align-items: center; font-size: 18px; padding: 5px 0px; font-weight: 700;">
@@ -692,7 +693,7 @@
     </div>
     <div class="imgdesk" style="background-color: #FEFEFE; ">
 
-        <img src="/imgs/motivos2.png" class="imgdesk "
+        <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/motivos2.png" class="imgdesk "
             style="width: 80%;margin-left: auto;margin-right: auto; object-fit: contain; margin-top: 50px; " />
     </div>
     </div>
@@ -702,13 +703,16 @@
         <div id="caroasoca" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" style="overflow: visible; margin: 20px 0px;">
                 <div class="carousel-item active ">
-                    <img src="/imgs/partici/1.png" style="object-fit: contain; width: 60%; margin:  0px 20%">
+                    <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/partici/1.png"
+                        style="object-fit: contain; width: 60%; margin:  0px 20%">
                 </div>
                 <div class="carousel-item ">
-                    <img src="/imgs/partici/2.png" style="object-fit: contain; width: 60%; margin:  0px 20%">
+                    <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/partici/2.png"
+                        style="object-fit: contain; width: 60%; margin:  0px 20%">
                 </div>
                 <div class="carousel-item ">
-                    <img src="/imgs/partici/3.png" style="object-fit: contain; width: 60%; margin:  0px 20%">
+                    <img src="http://teste.acsp.com.br/public/upload/gallery/bvseqx/partici/3.png"
+                        style="object-fit: contain; width: 60%; margin:  0px 20%">
                 </div>
 
 
@@ -1467,7 +1471,7 @@
     <div class="btnWhatsapp associativismo" id="associativismo" style="display:block !important;overflow: hidden;">
         <a href="https://api.whatsapp.com/send/?phone=551131803737&amp;text=Ol%C3%A1!%20Vim%20pelo%20site%20do%20BoaVista%20Equifax%20e%20gostaria%20de%20conversar%20com%20voc%C3%AAs"
             id="associativismo" title="Whatsapp" target="_blank">
-            <img src="./imgs/wpp.png" alt="" />
+            <img src=".http://teste.acsp.com.br/public/upload/gallery/bvseqx/wpp.png" alt="" />
         </a>
     </div>
     <script>
