--- a/padrão.html
+++ b/padrão.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Consultas em pacotes e pré-pagas Equifax | BoaVista</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -451,19 +451,21 @@
             </div>
             <div class="menute">
 
-                <a href="#inputs">Consultar pacotes</a>
+                <a href="https://acsp.com.br/boavista-equifax#top">Consultas em pacotes</a>
             </div>
             <div class="menute">
 
-                <a href="#desktflex">Consultas avulsas</a>
+                <a href="https://acsp.com.br/boavista-equifax#desktflex">Consultas pré-pagas</a>
             </div>
             <div class="menute">
 
-                <a href="">Consultar CPF ou CNPJ</a>
+                <a href="https://acsp.com.br/boavista-equifax#qmsomos">Quem Somos</a>
+
             </div>
             <div class="menuteduvida">
 
-                <a href="#duvida" class="duvida">Área do associado</a>
+                <a href="https://acsp.com.br/boavista-equifax#area" class="duvida">Área do
+                    associado</a>
             </div>
         </div>
     </div>
@@ -517,7 +519,7 @@
                                 d="M5.25 9C5.25 6.92894 6.92894 5.25 9 5.25C11.0711 5.25 12.75 6.92894 12.75 9C12.75 11.0711 11.0711 12.75 9 12.75C6.92894 12.75 5.25 11.0711 5.25 9ZM9 6.75C7.75736 6.75 6.75 7.75736 6.75 9C6.75 10.2426 7.75736 11.25 9 11.25C10.2426 11.25 11.25 10.2426 11.25 9C11.25 7.75736 10.2426 6.75 9 6.75Z"
                                 fill="#F9FAFA"></path>
                         </svg>
-                        &nbsp;Rua Boa vista, 51 - Centro<br>
+                        &nbsp;Rua Boa Vista, 51 - Centro<br>
                         01014-911 - São Paulo - SP</p>
                 </div>
             </div>
@@ -713,7 +715,7 @@
                                     confirmButtonText: "Fechar"
                                 }).then((result) => {
                                     // Redirect to thank-you page
-                                    window.location.href = 'https://teste.acsp.com.br/pre-visualizar-pagina/ttdmw64-stage-contato';
+                                    window.location.href = 'https://teste.acsp.com.br/ttdmw64-stage-contato';
                                 });
                             } else {
                                 form.find('button[name=submit]').prop("disabled", false);
@@ -1199,7 +1201,7 @@
                                 icon: 'success',
                                 confirmButtonText: 'Fechar'
                             }).then(() => {
-                                window.location.href = 'https://acsp.com.br/lp-agradecimento-clube';
+                                window.location.href = 'https://acsp.com.br/boavista-equifax-agradecimento';
                             });
                         } else {
                             Swal.fire({
